Bug 142249 - [EMF] Polydraw is not implemented
Summary: [EMF] Polydraw is not implemented
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2021-05-13 00:25 UTC by Valek Filippov
Modified: 2023-05-11 19:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
EMF sample with Polydraw (228 bytes, image/x-emf)
2021-05-13 00:26 UTC, Valek Filippov
Details
Screenshot of the sample EMF file opened in MS Paint (2.66 KB, image/png)
2021-05-13 00:27 UTC, Valek Filippov
Details
EMF sample with Polydraw16 (196 bytes, image/x-emf)
2021-05-13 00:33 UTC, Valek Filippov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valek Filippov 2021-05-13 00:25:34 UTC
Description:
LO doesn't implement Polydraw MR

Steps to Reproduce:
Open attached EMF sample.

Actual Results:
LO draws an empty image.

Expected Results:
It should draw couple of figures.


Reproducible: Always


User Profile Reset: No



Additional Info:
Polydraw16 is also missed.
Comment 1 Valek Filippov 2021-05-13 00:26:19 UTC
Created attachment 171937 [details]
EMF sample with Polydraw
Comment 2 Valek Filippov 2021-05-13 00:27:24 UTC
Created attachment 171938 [details]
Screenshot of the sample EMF file opened in MS Paint
Comment 3 Valek Filippov 2021-05-13 00:33:23 UTC
Created attachment 171939 [details]
EMF sample with Polydraw16

Coordinates and types of the points are the same in Polydraw and Polydraw16 sample, both EMFs should look the same as on attached screenshot.
Comment 4 Roman Kuznetsov 2021-05-22 17:54:38 UTC
confirm in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 128f67e0efa02294205a1abe1be874557ecdcecd
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-05-19_06:21:05
Calc: threaded
Comment 5 Commit Notification 2023-05-10 14:46:49 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ba0bf0ab2c24d309e8a938cec26daa41eba9c8cf

tdf#142249 EMF Implement EMR_POLYDRAW record

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Bartosz 2023-05-10 17:56:44 UTC
Two years after bug was created, it is finally resolved...
Comment 7 BogdanB 2023-05-11 19:18:42 UTC
Thanks Bartosz.

Working well in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8cb7a658b33e296024044f3377378644a9a97ef
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Not in (just as a reference for test)
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded