tdf#142249 EMF Implement EMR_POLYDRAW record

The EMR_POLYDRAW record specifies a set of line segments and Bezier curves.

Change-Id: I93d846d2fbb7a60b0565668a17ee092da30ef21c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151424
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>